--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         depends_on:
             - php
             - mariadb
+            - phpmyadmin
         networks:
             - shared_network
 
@@ -48,6 +49,19 @@ services:
         volumes:
             - database:/var/lib/mysql
             - ./.docker/Mysql/my.cnf:/etc/mysql/my.cnf
+        networks:
+            - shared_network
+
+    phpmyadmin:
+        container_name: ${PROJECT}-phpmyadmin
+        image: phpmyadmin/phpmyadmin
+        restart: unless-stopped
+        tty: true
+        ports:
+            - "8080:80"
+        environment:
+            PMA_HOST: mariadb
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
         networks:
             - shared_network
 
