--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
             - "3306:3306"
         volumes:
             - database:/var/lib/mysql
+            - ./Web:/var/www
             - ./.docker/Mysql/my.cnf:/etc/mysql/my.cnf
         networks:
             - shared_network
