Separate NPM and Composer from PHP image

--- a/.docker/Php/Dockerfile
+++ b/.docker/Php/Dockerfile
@@ -18,10 +18,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     libonig-dev \
     libzip-dev \
-    libgd-dev \
-    && curl -sL https://deb.nodesource.com/setup_16.x | bash - \
-    && apt-get install -y nodejs\
-    && apt-get install -y npm
+    libgd-dev
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -31,18 +28,12 @@ RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl sockets bcmath opca
 RUN docker-php-ext-configure gd --with-external-gd
 RUN docker-php-ext-install gd
 
-# Install composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
 # Add user for laravel application
 RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 
 # Ensure www-data has the correct permissions
 RUN chown -R www:www /var/www
-
-# Install Node Plugins
-RUN npm install -g vite
 
 # Change current user to www
 USER www
