--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,8 @@ services:
         image: node:latest
         restart: unless-stopped
         tty: true
+        ports:
+            - "5173:5173"
         volumes:
             - ./Web:/var/www
         working_dir: /var/www
